# Gerenciamento-Python1

./: LICENSE  README.md  data.json  main.py  pyproject.toml  storage.py  tasks.csv  test_storage.py
task_organizer/: cli.py  storage.py  test_storage.py
