[project]
name = "task-organizer"
version = "0.1.0"
description = ""
authors = [
    {name = "João Teodorico ",email = "125577087+Joao-Teodorico@users.noreply.github.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "click (>=8.2.1,<9.0.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
